<resources>
    <string name="app_name">Atpic</string>
    <string name="name_input">Name</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="cart">Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="history">History</string>


    <string name="dots_indicator">DotsIndicator</string>
    <string name="spring_dots_indicator">SpringDotsIndicator</string>
    <string name="worm_dots_indicator">WormDotsIndicator</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="loremipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat lectus bibendum, facilisis arcu a, finibus diam. Ut semper tempor mauris nec consectetur. Duis et rutrum dolor, non ultricies elit. Integer magna leo, lacinia sed dignissim at, fermentum ac neque. Sed in rhoncus augue, a ultrices sapien. Donec mauris enim, laoreet at consectetur sed, vehicula sit amet dui. Sed scelerisque justo faucibus ipsum luctus, eget tempor neque molestie. Pellentesque eget urna sit amet est rutrum tristique ut et dolor.

Quisque vehicula blandit lacus, ut maximus sem pretium laoreet. Cras feugiat ex ut tellus mollis ultrices. Praesent gravida pharetra porttitor. Donec viverra, lectus nec iaculis rhoncus, dui libero varius justo, vitae dignissim metus sem et tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi placerat nulla eu sapien tempus, sed eleifend ante dapibus. Aenean dictum metus consequat arcu tempus accumsan. In ac nulla nisl. Aliquam erat volutpat. Phasellus gravida porttitor odio. Suspendisse interdum mollis nulla auctor fermentum. Duis quis lorem et tellus condimentum ultricies fringilla eget sem. Donec vel vulputate justo, a consectetur nibh.

Ut finibus rhoncus lorem sit amet pulvinar. Duis euismod in nibh a vulputate. Mauris magna sapien, semper quis aliquet nec, malesuada ac turpis. Proin mattis sed lorem a rutrum. Nullam sed ligula id ante semper imperdiet sit amet vitae dolor. Duis ut orci eu urna vehicula lobortis sit amet euismod nulla. Integer ultricies erat vitae ante tempor sagittis. In sed vestibulum urna. Duis volutpat aliquam vehicula. Nunc velit ligula, aliquet vel dolor at, viverra imperdiet nibh. Etiam dignissim elit vitae consectetur dignissim. Vestibulum in lectus vitae velit aliquam fermentum. Aenean scelerisque mollis ex ut convallis. Pellentesque ut imperdiet lacus. Vivamus laoreet sed nisl quis vulputate.

Suspendisse eget sem a risus pellentesque tincidunt. Duis vel facilisis nisi. Nam placerat quis lacus vitae molestie. Donec ut metus eros. Mauris felis tellus, faucibus a nunc at, faucibus congue dui. Cras sit amet pharetra mauris, in pretium nibh. Donec blandit congue lectus, quis fermentum erat. Curabitur viverra consectetur justo, a blandit eros commodo ac. Vestibulum ultricies aliquet pulvinar. Cras pharetra tincidunt pulvinar. Phasellus placerat tempor mi, non mollis velit fermentum vel. Cras at egestas est. Fusce eget euismod tortor. Nullam sed elementum tellus, et venenatis augue. Quisque at libero aliquam, pulvinar neque vitae, ultricies nibh. Aenean sollicitudin rhoncus erat, posuere ullamcorper felis posuere sed.

Phasellus ipsum ipsum, euismod quis nibh vitae, iaculis rhoncus risus. Etiam sem purus, malesuada vel enim in, vulputate scelerisque purus. Maecenas quis volutpat magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris elementum, ex eu ornare accumsan, odio orci rhoncus leo, non placerat erat purus vel justo. Sed imperdiet, magna lacinia consectetur porta, odio eros tempus massa, at vulputate tortor nisl quis felis. Pellentesque aliquam nec purus vel pulvinar. Integer auctor lobortis tellus. Sed quam ipsum, rutrum et sollicitudin ut, faucibus nec sem. Maecenas in lobortis risus. "
    </string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="title_activity_success">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
</resources>