<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:exb_color="#FF8888" />

    <item
        android:id="@+id/bookmarks"
        android:title="@string/bookmarks"
        android:icon="@drawable/ic_bookmarks"
        app:exb_color="#fa2" />

    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:exb_color="#ff77a9" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:exb_color="#2270DE" />

</menu>